kubernetes/service-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: resilient-sadad-network
spec:
  selector:
    app: resilient-sadad-network
  ports:
    - name: http
      port: 80
      targetPort: 8080
